add_subdirectory(test)

wl_library(ai_hints
  SRCS
    ai_hints.cc
    ai_hints.h
  DEPENDS
    base_log
    base_macros
    logic_constants
    logic_exceptions
    scripting_lua_table
)

wl_library(ai
  SRCS
    ai_help_structs.cc
    ai_help_structs.h
    computer_player.cc
    computer_player.h
    defaultai_seafaring.cc
    defaultai_warfare.cc
    defaultai.cc
    defaultai.h
  DEPENDS
    ai_hints
    base_exceptions
    base_i18n
    base_log
    base_macros
    base_string
    base_time_string
    economy
    logic
    logic_constants
    logic_commands
    logic_map
    logic_map_objects
)
