wl_library(economy
  SRCS
    cmd_call_economy_balance.cc
    cmd_call_economy_balance.h
    economy.cc
    economy.h
    economy_data_packet.cc
    economy_data_packet.h
    expedition_bootstrap.cc
    expedition_bootstrap.h
    flag.cc
    flag.h
    fleet.cc
    fleet.h
    idleworkersupply.cc
    idleworkersupply.h
    iroute.h
    itransport_cost_calculator.h
    portdock.cc
    portdock.h
    request.cc
    request.h
    road.cc
    road.h
    route.cc
    route.h
    routeastar.cc
    routeastar.h
    router.cc
    router.h
    routing_node.h
    shippingitem.cc
    shippingitem.h
    supply.h
    supply_list.cc
    supply_list.h
    trackptr.h
    transfer.cc
    transfer.h
    ware_instance.cc
    ware_instance.h
    warehousesupply.h
    input_queue.cc
    input_queue.h
    wares_queue.cc
    wares_queue.h
    workers_queue.cc
    workers_queue.h
  DEPENDS
    base_exceptions
    base_log
    base_macros
    io_fileread
    logic
    logic_constants
    logic_widelands_geometry
    map_io
    notifications
    wui
)
add_subdirectory(test)
