add_subdirectory(text)

wl_library(graphic_color
  SRCS
    color.h
    color.cc
  USES_SDL2
)

wl_library(graphic_text_layout
  SRCS
    text_layout.cc
    text_layout.h
    text_constants.h
  DEPENDS
    graphic_color
)


wl_library(graphic_image_io
  SRCS
    image_io.h
    image_io.cc
  USES_PNG
  USES_SDL2
  USES_SDL2_IMAGE
  DEPENDS
    base_exceptions
    graphic_surface
    io_fileread
    io_filesystem
    io_stream
)

wl_library(graphic_image
  SRCS
    image.h
    image_cache.cc
    image_cache.h
  USES_SDL2
  USES_SDL2_IMAGE
  DEPENDS
    base_log
    base_macros
    graphic_image_io
    graphic_surface
)

wl_library(graphic_surface
  SRCS
    compositemode.h
    gl/surface.cc
    gl/surface.h
    gl/surface_screen.cc
    gl/surface_screen.h
    gl/surface_texture.cc
    gl/surface_texture.h
    gl/utils.cc
    gl/utils.h
    sdl/surface.cc
    sdl/surface.h
    sdl/utils.cc
    sdl/utils.h
    surface.cc
    surface.h
    surface_cache.cc
    surface_cache.h
  USES_OPENGL
  USES_SDL2
  DEPENDS
    base_macros
    base_exceptions
    base_geometry
    base_log
    graphic
    graphic_color
)

wl_library(graphic
  SRCS
    align.cc
    align.h
    animation.cc
    animation.h
    colormap.cc
    colormap.h
    default_resolution.h
    diranimations.h
    font.cc
    font.h
    font_handler.cc
    font_handler.h
    font_handler1.cc
    font_handler1.h
    game_renderer.cc
    game_renderer.h
    gl/blit_program.cc
    gl/blit_program.h
    gl/dither_program.cc
    gl/dither_program.h
    gl/draw_rect_program.cc
    gl/draw_rect_program.h
    gl/draw_line_program.cc
    gl/draw_line_program.h
    gl/fill_rect_program.cc
    gl/fill_rect_program.h
    gl/fields_to_draw.h
    gl/game_renderer.cc
    gl/game_renderer.h
    gl/road_program.cc
    gl/road_program.h
    gl/terrain_program.cc
    gl/terrain_program.h
    gl/system_headers.h
    graphic.cc
    graphic.h
    image_transformations.cc
    image_transformations.h
    in_memory_image.cc
    in_memory_image.h
    minimap_renderer.cc
    minimap_renderer.h
    rendertarget.cc
    rendertarget.h
    richtext.cc
    richtext.h
    sdl/game_renderer.cc
    sdl/game_renderer.h
    sdl/terrain.cc
    sdl/terrain.h
    sdl/vertex.h
    text_parser.cc
    text_parser.h
    texture.cc
    texture.h
    wordwrap.cc
    wordwrap.h
  USES_OPENGL
  USES_SDL2
  USES_SDL2_GFX
  USES_SDL2_IMAGE
  USES_SDL2_TTF
  DEPENDS
    base_deprecated
    base_exceptions
    base_geometry
    base_i18n
    base_log
    base_macros
    build_info
    economy
    graphic_color
    graphic_image
    graphic_image_io
    graphic_surface
    graphic_text
    graphic_text_layout
    helper
    io_fileread
    io_filesystem
    io_stream
    logic
    profile
    random
    scripting
    sound
    ui_basic
    wui
)
